@@ -49,16 +49,12 @@ public class Repository {
      * @return ścieżka do repozytorium lub null, jeśli nie znaleziono
      */
     public static Path whereIsRepo() {
-        try {
-            Path current = Paths.get(".").toRealPath();
-            while (current != null) {
-                if (Files.isDirectory(current.resolve(".glit"))) {
-                    return current;
-                }
-                current = current.getParent();
+        Path current = Path.of(System.getProperty("user.dir"));
+        while (current != null) {
+            if (Files.isDirectory(current.resolve(".glit"))) {
+                return current;
             }
-        } catch (IOException e) {
-            System.out.println(e);
+            current = current.getParent();
         }
         return null;
     }
@@ -191,7 +187,7 @@ public class Repository {
     private static boolean isChanged(GlitIndex index, Path file) throws IOException {
         IndexEntry entry = findInIndex(index, file);
         if (entry == null) {
-//            System.out.println("not found in index");
+            System.out.println("not found in index");
             return true;
         }
         Path attrPath = REPOSITORY_PATH.resolve(file);
@@ -200,48 +196,48 @@ public class Repository {
 
         // OS independent
         if (entry.getCtimeSec() != attrs.creationTime().to(TimeUnit.SECONDS)) {
-//            System.out.println("csec");
+            System.out.println("csec");
             return true;
         }
         if (entry.getCtimeNsec() != ((attrs.creationTime().to(TimeUnit.NANOSECONDS) % 1_000_000_000L))) {
             System.out.println(entry.getCtimeNsec() + "   " + attrs.creationTime().to(TimeUnit.NANOSECONDS) % 1_000_000_000L);
-//            System.out.println("cnsec");
+            System.out.println("cnsec");
             return true;
         }
         if (entry.getMtimeSec() != attrs.lastModifiedTime().to(TimeUnit.SECONDS)) {
-//            System.out.println("msec");
+            System.out.println("msec");
             return true;
         }
         if (entry.getMtimeNsec() != attrs.lastModifiedTime().to(TimeUnit.NANOSECONDS) % 1_000_000_000L) {
-//            System.out.println("mnsec");
+            System.out.println("mnsec");
             return true;
         }
 
         // OS dependent
         if (entry.getDev() != (long) Files.getAttribute(attrPath, "unix:dev")) {
-//            System.out.println("dev");
+            System.out.println("dev");
             return true;
         }
         if (entry.getIno() != (long) Files.getAttribute(attrPath, "unix:ino")) {
-//            System.out.println("ino");
+            System.out.println("ino");
             return true;
         }
         if (entry.getMode() != (int) Files.getAttribute(attrPath, "unix:mode")) {
-//            System.out.println("mode");
+            System.out.println("mode");
             return true;
         }
         if (entry.getUid() != (int) Files.getAttribute(attrPath, "unix:uid")) {
-//            System.out.println("uid");
+            System.out.println("uid");
             return true;
         }
         if (entry.getGid() != (int) Files.getAttribute(attrPath, "unix:gid")) {
-//            System.out.println("gid");
+            System.out.println("gid");
             return true;
         }
 
         // OS independent
         if (entry.getFileSize() != attrs.size()) {
-//            System.out.println("size");
+            System.out.println("size");
             return true;
         }
 
@@ -273,7 +269,7 @@ public class Repository {
 
         INDEX_PATH = REPOSITORY_PATH.resolve(".glit/index");
         boolean indexExists = Files.exists(INDEX_PATH) && Files.size(INDEX_PATH) > 0;
-        GlitIndex newIndex = new GlitIndex(2); // using version 2 of Glit - to be compatible with git
+        GlitIndex newIndex = new GlitIndex(2); // using version 2 to be compatible with git
         ObjectWriter writer = new ObjectWriter(REPOSITORY_PATH);
         if (indexExists) {
             boolean isAnyChanged = false;
@@ -287,7 +283,7 @@ public class Repository {
                 }
                 // System.out.println(el);
                 if (isChanged(currIndex, arg)) {
-//                    System.out.println(arg + " is changed");
+                    System.out.println(arg + " is changed");
                     entries.removeIf(e -> e.getPath().equals(arg.toString()));
                     newIndex.add(IndexEntry.createFromPath(arg, REPOSITORY_PATH));
                     isAnyChanged = true;
@@ -304,8 +300,6 @@ public class Repository {
 //        index somehow not existing
         {
 
-            // Files.write(INDEX_PATH, new byte[0], StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING); -> in IndexUtils there is doubling
-
             for (Object el : cliCall.getArguments()) {
                 Path arg = (Path) el;
                 if (isIgnored(arg)) {
@@ -316,7 +310,6 @@ public class Repository {
 
             }
 
-            // co z usunietymi plikami? -> chyba przy commit się stworzy nowy GlitIndex, w którym ich nie będzie
         }
         // writing newIndex - if nothing is changed the function will return with info (look up)
         try {
@@ -383,10 +376,20 @@ public class Repository {
 //        parent identifying
         Path headPath = REPOSITORY_PATH.resolve(".glit/HEAD");
         Path branchRef = getPathFromHead(headPath);
-        // when there's no branch or working detached
-        boolean isInObjects = branchRef==null ? false : branchRef.getParent().getParent().equals(REPOSITORY_PATH.resolve(".glit").resolve("objects"));
-        String idParent = branchRef==null ? "" : isInObjects ? REPOSITORY_PATH.resolve(".glit").resolve("objects").relativize(branchRef).toString().replace("/","") : getLastCommitHash(branchRef);
-//        creating tree
+        System.out.println("DEBUG: pathFromHead: "+branchRef);
+        // when in detached HEAD check if there is commit hash written in HEAD
+        boolean isInObjects=false;
+        String idParent;
+        if(branchRef==null){
+            try {
+                idParent = Files.readString(headPath);
+                isInObjects=true;
+            }catch (IOException e){throw new IOException("Couldn't find HEAD file");}
+        }else{
+            idParent = getLastCommitHash(branchRef);
+        }
+        System.out.println("DEBUG: idParent: "+idParent);
+//          creating tree
         Tree commitTree = Tree.createAndWriteTree(mapIndexFiles(INDEX_PATH));
 
         Commit commit = new Commit(message, commitTree.getHash(), idParent,author);
@@ -634,7 +637,9 @@ public class Repository {
      * that HEAD points to.
      *
      * @param headPath the path to the .glit/HEAD file
-     * @return the path to the active branch reference file, or a path pointing directly to an object hash in detached HEAD mode
+     * @return the path to the active branch reference file if there is a content:
+     * "ref: refs/heads/"...
+     * null otherwise
      */
     public static Path getPathFromHead(Path headPath) {
         if (!Files.exists(headPath)) {
@@ -646,12 +651,14 @@ public class Repository {
             if (temp.startsWith("ref: ")) {
                 lastCommitPath = temp.split(" ")[1];
                 return REPOSITORY_PATH.resolve(".glit").resolve(lastCommitPath);
-            } else if (!temp.isEmpty()) {
-//                was:
-//                lastCommitPath = temp;
-//                because not able to read in detached mode, changed to:
-                return REPOSITORY_PATH.resolve(".glit").resolve("objects").resolve(temp.substring(0,2)).resolve(temp.substring(2));
-            }else{
+            }
+//            else if (!temp.isEmpty()) {
+////                was:
+////                lastCommitPath = temp;
+////                because not able to read in detached mode, changed to:
+//                return REPOSITORY_PATH.resolve(".glit").resolve("objects").resolve(temp.substring(0,2)).resolve(temp.substring(2));
+//            }
+            else{
                 return null;
             }
 
@@ -832,12 +839,12 @@ public class Repository {
      *
      * @param cliCall the object containing parsed command-line arguments
      */
-    public static void branch(Call cliCall){
+    public static boolean branch(Call cliCall){
 
         if (REPOSITORY_PATH == null) {
             REPOSITORY_PATH = whereIsRepo();
         }
-        if (REPOSITORY_PATH == null) return;
+        if (REPOSITORY_PATH == null) return false;
         Path brachesPath = REPOSITORY_PATH.resolve(".glit/refs/heads/");
         Path headPath = REPOSITORY_PATH.resolve(".glit/HEAD");
         Path currentBranchPath = getPathFromHead(headPath);
@@ -851,7 +858,7 @@ public class Repository {
 
             if(Files.exists(brachesPath.resolve(newBranchName))){
                 System.out.println("Branch with this name already exists");
-                return;
+                return false;
             }
             Path newBranchPath = brachesPath.resolve(newBranchName);
             try {
@@ -869,7 +876,7 @@ public class Repository {
 
                 if (currentCommitHash.isEmpty()) {
                     System.out.println("fatal: Cannot create branch because there are no commits yet.");
-                    return;
+                    return false;
                 }
 
                 if(Files.exists(newBranchPath))
@@ -880,9 +887,11 @@ public class Repository {
             } catch (IOException e) {
                 e.printStackTrace();
                 System.out.println("fatal: glit branch error while creating file");
+                return false;
             }
 
         }
+        return true;
     }
 
     /**
@@ -946,10 +955,9 @@ public class Repository {
         REPOSITORY_PATH = whereIsRepo();
         INDEX_PATH = REPOSITORY_PATH.resolve(".glit/index");
         boolean creatingNewBranch = cliCall.getFlags().contains("b");
-        if(creatingNewBranch){
-            branch(cliCall);
+        if(creatingNewBranch && !branch(cliCall)){
+            return;
         }
-//        System.out.println("DEBUG1");
         String branchName = (String) cliCall.getArguments().get(0);
 
 
@@ -962,10 +970,10 @@ public class Repository {
         } catch (IOException e) {
             e.printStackTrace();
         }
-//        System.out.println("DEBUG2");
         Path newBranchPath = REPOSITORY_PATH.resolve(".glit/refs/heads").resolve(branchName);
         Path currBranchPath = getPathFromHead(REPOSITORY_PATH.resolve(".glit").resolve("HEAD"));
-        System.out.println("currBranchPath = "+currBranchPath);
+//        System.out.println("currBranchPath = "+currBranchPath);
+
 
         // restore file structure from branch's last commit
         if(!creatingNewBranch && !restoreFileStructureFromBranchLastCommit(newBranchPath, currBranchPath)){
@@ -992,7 +1000,17 @@ public class Repository {
             Commit commit = (Commit) reader.readObject(commitHash);
             String newTreeHash = commit.getTreeHash();
 
-            String currCommitHash = getLastCommitHash(currBranchPath);
+            String currCommitHash;
+            if(currBranchPath==null) {
+                try {
+                    currCommitHash = Files.readString(REPOSITORY_PATH.resolve(".glit").resolve("HEAD"));
+                }catch (IOException e){
+                    System.err.println("Fatal: couldn't read HEAD file");
+                    return false;
+                }
+            }else{
+                currCommitHash = getLastCommitHash(currBranchPath);
+            }
             Commit currCommit = (Commit) reader.readObject(currCommitHash);
             String currTreeHash = currCommit.getTreeHash();
             try {
@@ -1115,6 +1133,8 @@ public class Repository {
         ObjectWriter writer = new ObjectWriter(REPOSITORY_PATH);
         writer.saveObject(mergedCommit);
         setLastCommitHash(headsPath.resolve(ourBranchName), mergedCommit.getHash());
+        //clear index
+        try(BufferedWriter w = Files.newBufferedWriter(REPOSITORY_PATH.resolve(".glit").resolve("index") , StandardOpenOption.TRUNCATE_EXISTING)){}catch(Exception e){e.printStackTrace();}
         System.out.println("Merged succesfully");
     }
 
@@ -1125,24 +1145,36 @@ public class Repository {
         String their = theirCommitHash;
         ObjectReader reader = new ObjectReader(REPOSITORY_PATH);
         String base="";
-        while(!our.isEmpty() && !their.isEmpty()){
-            Commit ourCommit = (Commit) reader.readObject(our);
-            our = ourCommit.getParentHash();
-            ourList.add(our);
+        int counter=0;
+        while(!our.isEmpty() || !their.isEmpty()){
+            counter++;
+            System.out.println(counter + ". our: " + our + " their: " + their);
+
+            if(!our.isEmpty()){
+                Commit ourCommit = (Commit) reader.readObject(our);
+                our = ourCommit.getParentHash();
+                ourList.add(our);
+            }
+
+//            System.out.println(counter + ". ourlist: " + ourList);
             if(theirList.contains(our)){
                 base = our;
                 break;
             }
 
-            Commit theirCommit = (Commit) reader.readObject(their);
-            their = theirCommit.getParentHash();
-            theirList.add(their);
+            if(!their.isEmpty()) {
+                Commit theirCommit = (Commit) reader.readObject(their);
+                their = theirCommit.getParentHash();
+                theirList.add(their);
+            }
+//            System.out.println(counter + ". theirlist: " + theirList);
             if(ourList.contains(their)){
                 base = their;
                 break;
             }
+
         }
-//        System.out.println("DEBUG - getBaseTreeHash. Base hash: "+base);
+        System.out.println("DEBUG - getBaseTreeHash. Base hash: "+base);
         if(base.isEmpty()){
             throw new GlitException("Base is empty.");
         }
